Bake Indirect Lighting doesn't update env map reflection #59719

Closed
opened 2018-12-21 14:21:24 +01:00 by Marcin Twarowski · 3 comments

Win 10, GTX1080
Blender 2.80 2018-12-21 9dde3e42a7

Open attached blend file. Switch to rendered mode (Eevee). In "World" tab, change environment map's "Strength" from 0 to 1. Go to "Render" tab. Press "Bake Indirect Lighting". Shadows get updated, but reflection stays the same. In order to fix that, a user would need to first free lighting cache.lighting_cache_bug.blend

Win 10, GTX1080 Blender 2.80 2018-12-21 9dde3e42a7c5 Open attached blend file. Switch to rendered mode (Eevee). In "World" tab, change environment map's "Strength" from 0 to 1. Go to "Render" tab. Press "Bake Indirect Lighting". Shadows get updated, but reflection stays the same. In order to fix that, a user would need to first free lighting cache.[lighting_cache_bug.blend](https://archive.blender.org/developer/F6025677/lighting_cache_bug.blend)

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski
Clément Foucault was assigned by Sebastian Parborg 2018-12-21 18:07:01 +01:00

This issue was referenced by 603a37fa89

This issue was referenced by 603a37fa89bd1db1dc3c717b8d4b76a3abbb759a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59719
No description provided.