Fix T59719 Bake Indirect Lighting doesn't update env map reflection